In Media preflet, use BAlert to inform users that real-time audio/video is not supported (as per MediaRoster.cpp:3061). This fixes ticket #6012.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40139 a95241bf-73f2-0310-859d-f6bbb57e9c96